[package]
name = "crowd"
version = "0.0.1"
authors = ["Michal Nowikowski <godfryd@gmail.com>"]

[[bin]]
name = "crowd"
path = "src/main.rs"

[[bin]]
name = "crowd-client"
path = "src/client.rs"

[dependencies]
rustc-serialize = "0.3.15"
zmq = "0.7.0"
#msgpack = "0.1.0"
rmp = "0.3.0"

#[dependencies.zmq]
#git = "https://github.com/erickt/rust-zmq.git"

#[dependencies.msgpack]
#git = "https://github.com/mneumann/rust-msgpack.git"

##[dependencies.chrono]
##git = "https://github.com/lifthrasiir/rust-chrono"
